# piss

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  assets.rs  main.rs  ocr.rs  scanner.rs
