[package]
name = "piss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "4.4.1"
opencv = { version = "0.63.1", features = ["clang-runtime"] }
rust-embed = { version = "6.3.0", features = ["include-exclude", "debug-embed"] }
