[package]
name = "piss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "4.4.1"
opencv = "0.78.2" 
rust-embed = "6.6.1"
leptonica-plumbing = "1.0.1"
tesseract-plumbing = "0.9.0"
eframe = { version = "0.21.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.21.0"
serde = { version = "1.0.159", features = ["derive"] }
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2023.02.24"
dependencies = ["tesseract:x64-windows-static", "leptonica:x64-windows-static", "opencv4[contrib,nonfree]:x64-windows-static"]
